Implementación de tests y Mejoras
Se han implementado y superado con éxito los tests de QRServicio, Barrera y Vehiculo.

--- a/hito1/pom.xml
+++ b/hito1/pom.xml
@@ -16,8 +16,8 @@
     <dependencies>
         <dependency>
             <groupId>com.google.zxing</groupId>
-            <artifactId>core</artifactId>
-            <version>3.4.1</version>
+            <artifactId>javase</artifactId>
+            <version>3.5.3</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
